--- a/api/pom.xml
+++ b/api/pom.xml
@@ -3,11 +3,11 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.sugarcrm</groupId>
-  <artifactId>api</artifactId>
+  <artifactId>sugarcrm-api</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>api</name>
+  <name>sugarcrm-api</name>
   <url>http://www.sugarcrm.com</url>
 
   <properties>
@@ -16,28 +16,10 @@
 
   <dependencies>
       <dependency>
-        <groupId>net.oauth.core</groupId>
-        <artifactId>oauth</artifactId>
-        <version>20100527</version>
-        <scope>compile</scope>
-      </dependency>
-      <dependency>
-        <groupId>net.oauth.core</groupId>
-        <artifactId>oauth-provider</artifactId>
-        <version>20100527</version>
-        <scope>compile</scope>
-      </dependency>
-      <dependency>
         <groupId>org.apache.httpcomponents</groupId>
         <artifactId>httpclient</artifactId>
         <version>4.1.2</version>
       </dependency>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
       <dependency>
 		  <groupId>com.google.code.gson</groupId>
 		  <artifactId>gson</artifactId>
@@ -48,16 +30,17 @@
 		<artifactId>commons-codec</artifactId>
 		<version>1.7</version>
 	  </dependency>
+	  
+	  <!-- Test Dependencies -->
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>3.8.1</version>
+      <scope>test</scope>
+    </dependency>
     </dependencies>
     
-  
-  <repositories>
     
-      <repository>
-        <id>oauth</id>
-        <name>OAuth Repository</name>
-        <url>http://oauth.googlecode.com/svn/code/maven</url>
-      </repository>
-      
-  </repositories>
+    
+    
 </project>
